--- a/galaxy.yml
+++ b/galaxy.yml
@@ -8,7 +8,7 @@ namespace: desosu
 name: general
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.0.1-rc5
+version: 1.0.1
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
